使用Maven重构了项目结构, 添加了自定义异常类

--- a/doc/MemberExplain/61520216石杰.md
+++ b/doc/MemberExplain/61520216石杰.md
@@ -3,7 +3,9 @@
 
 现在大概的设定就是`lex.i`文件分为3个部分
 
-![](./61520216石杰.assets/image-20230324151221856.png)
+- Definition: 在第一个%%前
+- Rules: 在第一个%%和第二个%%之间
+- User subroutines: 在第二个%%之后
 
 ### Definition
 
@@ -33,7 +35,12 @@
     - `^`表示补集, 如`[^ a-c]`可以匹配除a, b, c以外的一切字符
   - 双引号`""`内字符可以匹配其本身, 如`"+"`可以匹配加号`+`, `"."`可以匹配点号`.`
   - `\n, \t`匹配换行, tab
-  - ![image-20230324154136103](./61520216石杰.assets/image-20230324154136103.png)
+  - 圆括号: `()` 表示表示提高运算等级, 这里我们没有使用分组
+  - 竖号`丨` 表示可选的, 与标准正则表达式语法一致, 如`a(b|c)`匹配`ab`或`ac`
+  - 后置符号, 包括
+    - 星号 `*`, 表示0个或更多
+    - 加号 `+`, 表示1个或更多
+    - 问号 `?`, 表示0个或1个
   - 上一部分定义的子表达式需要用花括号`{}`括起来, 如`{letter}`
 
 - 多个匹配时
@@ -73,19 +80,21 @@
 
 #### 标准(最简)正则表达式
 
-只有字母, 数字和 $|,\ \cdot, \ ^*$运算符, 例如$a(a|b)^*cd$, 加入运算符后为$a\cdot(a|b)^*\cdot c \cdot d$
+~~只有字母, 数字和 $|,\ \cdot, \ ^*$运算符, 例如$a(a|b)^*cd$, 加入运算符后为$a\cdot(a|b)^*\cdot c \cdot d$~~
+
+讨论后决定保留+, ?, *, $\cdot$, | 共5个运算符, 对+和?的处理交由后续构建NFA类
 
 #### 后缀表达式
 
-(?)尝试采用栈存储结构, 存储节点形式为
+~~(?)尝试采用栈存储结构, 存储节点形式为~~
 
-```java
-public class ExpressionNode {
-    boolean isLexRegexOperator;
-    LexRegexOperator operator;
-    String content;
-}
-```
+~~public class ExpressionNode {
+~~    boolean isLexRegexOperator;
+~~    LexRegexOperator operator;
+~~    String content;
+~~}~~
+
+讨论后决定先按字符串形式返回
 
 ### 公共方法
 
@@ -121,7 +130,8 @@ public String getRawRegex()
  * 得到表最简表达式的后缀形式, 栈形式存储, 如 (a|b)·(b·c)* --> ab|bc·*· 栈顶是a
  * @return 后缀表达式
  */
-public Stack<ExpressionNode> getExpressionNodeStack()
+//public Stack<ExpressionNode> getExpressionNodeStack() 改为直接返回字符串
+Public String getSuffixExpression();
 ```
 
 ```java
@@ -137,6 +147,20 @@ public String getSimpleRegex()
 
 - [x] 替换替代项 {digit} -> [0-9]
 - [ ] 范围展开 [0-9] -> (0|1|2|...|9)
-- [ ] 重复项替换 a+ -> aa*
+- [ ] ~~重复项替换 a+ -> aa*~~
 - [ ] 加点 a | bc -> a | b · c
 - [ ] 转变为后缀形式 a | b · c -> a b|c ·
+
+### 示例
+
+```java
+public static void TestRegex(){
+    LexRegex.addLexRegexSubstitutions("D", "[0-9]");
+    LexRegex.addLexRegexSubstitutions("L", "[a-zA-Z_]");
+    LexRegex testRegex = new LexRegex("{L}({L}|\"{D}\"[{}])*");
+    System.out.println(testRegex.getRawRegex());
+    System.out.println(testRegex.getSimpleRegex());
+    //目前结果为 [a-zA-Z_]([a-zA-Z_] | "{D}"[{}])*
+}
+```
+
