使用新方法完成了Regex, 但没有经过整体测试

--- a/doc/MemberExplain/61520216石杰.md
+++ b/doc/MemberExplain/61520216石杰.md
@@ -34,6 +34,7 @@
     - `-`表示范围, 如`[a-c]`可以匹配 a或b或c
     - `^`表示补集, 如`[^ a-c]`可以匹配除a, b, c以外的一切字符
   - 双引号`""`内字符可以匹配其本身, 如`"+"`可以匹配加号`+`, `"."`可以匹配点号`.`
+    - 注意, `""`内不支持转义, 比如`"\""`或`"\t"`, 里面直接匹配其本身, 而要相匹配`"`, 只能使用`\"`
   - `\n, \t`匹配换行, tab
   - 圆括号: `()` 表示表示提高运算等级, 这里我们没有使用分组
   - 竖号`丨` 表示可选的, 与标准正则表达式语法一致, 如`a(b|c)`匹配`ab`或`ac`
@@ -42,6 +43,10 @@
     - 加号 `+`, 表示1个或更多
     - 问号 `?`, 表示0个或1个
   - 上一部分定义的子表达式需要用花括号`{}`括起来, 如`{letter}`
+    - 注意`{}`内也不支持转义
+  - `/* */`是注释(未实现)
+  - `%start, <start>`是lex状态切换(未实现)
+  - `$`主要用于yacc(保留)
 
 - 多个匹配时
   - 长度不同: 最长匹配原则
