--- a/doc/MemberExplain/61520216石杰.md
+++ b/doc/MemberExplain/61520216石杰.md
@@ -15,6 +15,7 @@
 - 在`%{ %}`外的部分为定义的**Lex替换式**
   - 格式: `<name>  <translation>`
   - 例如 letter  [a-zA-Z]
+  - 别名只能用字母, 数字和下划线`_`, 不能使用其他符号.
 
 ### Rules
 
@@ -42,7 +43,7 @@
     - 星号 `*`, 表示0个或更多
     - 加号 `+`, 表示1个或更多
     - 问号 `?`, 表示0个或1个
-  - 上一部分定义的子表达式需要用花括号`{}`括起来, 如`{letter}`
+  - 上一部分定义的子表达式需要用花括号`{}`括起来, 如`{letter}` 
     - 注意`{}`内也不支持转义
   - `/* */`是注释(未实现)
   - `%start, <start>`是lex状态切换(未实现)
@@ -64,6 +65,15 @@
   - 没有最短匹配模式如`.*?`
 
   - 括号`()`是运算意义上的分组, 类似四则运算, 不是匹配意义上的分组
+
+  - 不支持用 `|` 运算符来表示该动作与后面的动作一样, 例如
+    - ```lex
+      ""    |
+      "\t"  |
+      "\n"  ;
+      
+      等价于
+      "[ \t\n]"
 
 #### `<action>`
 
