--- a/doc/MemberExplain/61520216石杰.md
+++ b/doc/MemberExplain/61520216石杰.md
@@ -1,7 +1,7 @@
 # Lex程序
 ## Lex 语法
 
-现在大概的设定就是`lex.i`文件分为3个部分
+`lex.l`文件分为3个部分
 
 - Definition: 在第一个%%前
 - Rules: 在第一个%%和第二个%%之间
@@ -12,7 +12,7 @@
 分为两部分
 
 - 在`%{ %}`中的部分直接copy到源程序
-- 在`%{ %}`外的部分为定义的**Lex替换式**
+- 在`%{ %}`外的部分为定义的**Lex替换式**: 
   - 格式: `<name>  <translation>`
   - 例如 letter  [a-zA-Z]
   - 别名只能用字母, 数字和下划线`_`, 不能使用其他符号.
@@ -28,6 +28,7 @@
 - 规则
 
   - **运算符**: `" \ [ ] ˆ - ? . * | ( ) $ / { } % < >` 有运算作用, 无法匹配自身. 运算符可以通过斜杠`\`转意, 从而匹配自身, 如匹配字符串时`\"(\\.|[^\\"\n])*\"`中的`\"`就可以匹配双引号`"`
+  - 优先匹配原则: 如果一个字符串可以匹配多个规则, 则优先使用定义在前面的规则.
   - 字母和数字匹配其本身
   - 点`.`匹配除换行符`\n`外任意操作符
   - 方括号`[ ]`中包含的一串字符被命名为一个"字符族", 字符族可以匹配:
@@ -87,21 +88,77 @@
 
 ### User subroutines
 
-任意合法的C代码, 复制到C文件中
+任意合法的C代码, 直接复制到C文件中
 
-## Regex类
+
+
+## LexParser 类
+
+使用状态机形式读取`.l`文件, 状态机跳转与Action如下表, 其实状态为`InRegexAliasPart`
+
+|       | `InRegexAliasPart`  | `InCopyPart`       | `InRegexActionPart` | `InCCodePart` |
+| ----- | ------------------- | ------------------ | ------------------- | ------------- |
+| "%{"  | `InCopyPart`        | Error              | Error               | Error         |
+| "%%"  | `InRegexActionPart` | Error              | `InCCodePart`       | Error         |
+| "%}"  | Error               | `InRegexAliasPart` | Error               | Error         |
+| other | parser alias-regex  | store code         | parser regex-action | store code    |
+
+其中有两个主要函数, 分别是`parserRegexAliasFrom(String line)`与`parserRegexAndActionFrom(String line)`, 下面用伪代码简单说明一下
+
+1. `parserRegexAliasFrom(String line)`
+
+   ```JAVA
+   line.trim();	//防止前后空字符干扰划分
+   找到第一个空白字符位置i;
+   aliasMap.put(
+       line.subString(0,i), 
+       line.subString(i,line.length()).trim()
+   )
+   ```
+
+2. 
+
+
+
+## Regex类 
 
 ### 数据结构
 
 #### 标准(最简)正则表达式
 
-~~只有字母, 数字和 $|,\ \cdot, \ ^*$运算符, 例如$a(a|b)^*cd$, 加入运算符后为$a\cdot(a|b)^*\cdot c \cdot d$~~
-
 讨论后决定保留+, ?, *, $\cdot$, | 共5个运算符, 对+和?的处理交由后续构建NFA类
+
+`A+ -> AA*`, `A? ->  A|ε`
 
 #### 后缀表达式
 
-(?)尝试采用栈存储结构, 存储节点形式为
+采用栈存储结构, 存储节点形式为
+
+```json
+LexNode : {
+	isOperator(bool),
+	LexOperator :{
+		OR:"|", 
+		AND:"·", 
+		STAR:"*", 
+		ADD:"+", 
+		LEFT_BRACE:"(", 
+		RIGHT_BRACE:")", 
+		Question:"?"
+    }
+	LexChar : {
+		isSpecialChar(bool),
+		SpecialChar:{
+    		Empty:"\epsilon"
+        	All:"."
+        	Other
+    	},
+		Character
+	},
+}
+```
+
+其中, LexChar将用于后续NFA和DFA的生成
 
 ### 公共方法
 ```java
@@ -130,45 +187,8 @@ public String getSuffixStr()
 ### 当前进度
 
 - [x] 替换替代项 {digit} -> [0-9]
-
 - [x] 范围展开 [0-9] -> (0|1|2|...|9)
-
 - [ ] ~~重复项替换 a+ -> aa*~~
-
 - [x] 加点 a | bc -> a | b · c
-
 - [x] 转变为后缀形式 a | b · c -> a b|c ·
-
-  
-
-- 改用自动机形式实现, 
-
-### 使用示例
-
-```java
-public static void TestRegex(){
-    LexRegex.addLexRegexSubstitutions("D", "[0-9]");
-    LexRegex.addLexRegexSubstitutions("L", "[a-zA-Z_]");
-    LexRegex testRegex = new LexRegex("{L}({L}|\"{D}\"[{}])*");
-    System.out.println(testRegex.getRawRegex());
-    System.out.println(testRegex.getSimpleRegex());
-    //目前结果为 [a-zA-Z_]([a-zA-Z_] | "{D}"[{}])*
-}
-```
-### 测试
-#### 测试用例设计
-
-- 正例
-
-  - | 说明           | 输入                       | 预期输出 |
-    | -------------- | -------------------------- | -------- |
-    | 用户自定义替代 | 替代关系: t -> test; a{t}b | atestb   |
-    | 范围           |                            |          |
-    |                |                            |          |
-    |                |                            |          |
-
-    
-
-- 反例
-
-#### 测试过程和结果
+- [x] 改用自动机形式实现
